# dfast

./: .gitignore  README.md  docker-compose.yml
schemas/: README.md  inventory.json
src/enrich_order/: Dockerfile  pyproject.toml
src/enrich_order/main/: app.py  appsettings.py
src/enrich_order/main/models/: productinventory.py
src/ingest_api/: Dockerfile  README.md  pyproject.toml
src/ingest_api/api/: appsettings.py  main.py
src/ingest_api/api/models/: orderitem.py  productinventory.py
src/process_order/: README.md  pom.xml
src/process_order/src/main/java/com/dfast/app/: App.java  CompositeKey.java  OrderDeserializer.java  OrderItem.java  OrderItemKeySelector.java  ProductInventory.java  ProductInventoryDeserializer.java  ProductInventoryItemKeySelector.java
src/producer/: README.md  app.py  pyproject.toml
src/store_order/: pyproject.toml
src/store_order/main/: app.py  appsettings.py
src/store_order/main/models/: productinventory.py
src/update_inventory/: README.md  pyproject.toml
src/update_inventory/main/: app.py  appsettings.py
src/update_inventory/main/models/: product.py
volumes/dynamodb/: README.md
